--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "gatsby": "^2.18.4",
-    "gatsby-theme-blog": "^1.2.3",
+    "gatsby-plugin-google-analytics": "^2.1.29",
+    "gatsby-theme-blog": "^1.2.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
