--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "gatsby": "^2.18.17",
     "gatsby-plugin-google-analytics": "^2.1.31",
+    "gatsby-remark-prismjs": "^3.3.28",
     "gatsby-theme-blog": "^1.2.18",
+    "gatsby-transformer-remark": "^2.6.45",
+    "prismjs": "^1.17.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
